3. bomb proofed the type command.
4. started the objectifying for talk, dx and announcements.
5. fix talkmode so that it only does 'via' PC10s when it really needs to.
6. SEND now displays a message if you try to do it in not prompt mode.
7. stopped a few more things being done by rcmd (eg send, talk, ann, dx)
8. tidied up the talking a bit more.
9. Increase default hop counts all round.
29Jul00=======================================================================
1. added forward/latlong which will forward ALL the users that have a latitude
and longitude set on them to one or more locally connected nodes - with a hop
count of 1.
2. speeded up the show/node command by using the DB_File interface and 
sequentially reading the data directly and only 'get'ting the ones that are
nodes.
3. did the same for show/isolate and show/lockout.
28Jul00=======================================================================
1. fixed watchdbg midnight rollover loop and removed the date part of the 
date/time translation to leave just the time.
27Jul00=======================================================================
1. made sure that 'en' is the default language on new users.
2. issue error message if shutdown is attempted by a low privileged user.
3. Make sure a privilege is defined for all users (even if it is 0).
4. Try to fix some more dups (and the time on them).
5. make the time stored on dups generated locally on spots an integer no of 
minutes * 60 
6. send unsolicited PC[38]5s to the sysop if online.
7. merged current html from www.dxcluster.org with Ian's stuff
8. Added sgml files into the source tree
9. changed default paclen in client.c to 236
26Jul00=======================================================================
1. added wantgrid (to control display of grid square info on DX Broadcasts)
2. added lastoper for controlling periodic demands for user info from other
nodes.
3. added spiderFAQ stuff from Ian G0VGS and latest update of the admin manual